[gd_scene load_steps=11 format=2]

[ext_resource path="res://Game_Objects/HUD/Wave_Transition_Animation.tres" type="Animation" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]
[ext_resource path="res://Health_bar.tres" type="Theme" id=3]
[ext_resource path="res://Game_Objects/HUD/RESET_Wave_Transition_Animation.tres" type="Animation" id=4]
[ext_resource path="res://Game_Objects/Menus/PauseMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Guns/SideView/Shotgun.png" type="Texture" id=6]
[ext_resource path="res://Game_Objects/HUD/HUD_StatusEffectTextureRect.tscn" type="PackedScene" id=7]
[ext_resource path="res://Game_Objects/HUD/Generic_HUD_Text_Theme.tres" type="Theme" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.639216, 0, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.8, 0.8, 0.8, 0 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.341176, 0.164706, 0.152941, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.176471, 0.0431373, 0.0431373, 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="HUDControl" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_group_": true
}

[node name="HealthProgressBar" type="ProgressBar" parent="HUDControl"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -32.0
margin_right = 218.0
margin_bottom = -16.0
theme = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )

[node name="HealthLabel" type="Label" parent="HUDControl/HealthProgressBar"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = -40.0
margin_right = 85.0
margin_bottom = -26.0
theme = ExtResource( 8 )
text = "HP: 50/100"
valign = 1

[node name="CashLabel" type="Label" parent="HUDControl"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -96.0
margin_top = 16.0
margin_right = -13.0
margin_bottom = 30.0
theme = ExtResource( 8 )
text = "Cash: 0"
valign = 1
uppercase = true

[node name="ActionIndicatorLabel" type="Label" parent="HUDControl"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -113.5
margin_top = -128.0
margin_right = 113.5
margin_bottom = -114.0
grow_horizontal = 2
theme = ExtResource( 8 )
text = "Press f to fix barricade"
align = 1
valign = 1
uppercase = true

[node name="PauseTipLabel" type="Label" parent="HUDControl"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -288.0
margin_top = -16.0
margin_bottom = -2.0
grow_horizontal = 2
theme = ExtResource( 8 )
text = "Press space bar to pause game"
align = 1
valign = 1
uppercase = true

[node name="WaveNumLabel" type="Label" parent="HUDControl"]
margin_left = 16.0
margin_top = 16.0
margin_right = 99.0
margin_bottom = 30.0
theme = ExtResource( 8 )
text = "Wave: 0"
valign = 1
uppercase = true

[node name="WaveFinishedLabel" type="Label" parent="HUDControl/WaveNumLabel"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 140.0
margin_bottom = 14.0001
grow_horizontal = 2
theme = ExtResource( 8 )
text = "Wave ended"
align = 1
valign = 1
uppercase = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUDControl/WaveNumLabel/WaveFinishedLabel"]
anims/RESET = ExtResource( 4 )
anims/Wave_Transition_Animation = ExtResource( 1 )

[node name="ShowPlayerNextWaveTimer" type="Timer" parent="HUDControl/WaveNumLabel/WaveFinishedLabel"]

[node name="HealthProgressBarTween" type="Tween" parent="HUDControl"]

[node name="GunShadowTextureRect" type="TextureRect" parent="HUDControl"]
self_modulate = Color( 0, 0, 0, 0.427451 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = 240.0
margin_right = -224.0
margin_bottom = 272.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 17.0667, 17.0666 )
texture = ExtResource( 6 )

[node name="ClipLabel" type="Label" parent="HUDControl/GunShadowTextureRect"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 37.0
margin_top = -9.0
margin_right = 74.0
margin_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 8 )
text = "80
-----
1780"
align = 1
valign = 1
uppercase = true

[node name="GunTextureRect" type="TextureRect" parent="HUDControl/GunShadowTextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.0
margin_top = -18.5
margin_right = 16.0
margin_bottom = 13.5
rect_pivot_offset = Vector2( 17.0667, 17.0666 )
texture = ExtResource( 6 )

[node name="StatusEffectsContainer" type="GridContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -128.0
margin_top = -48.0
margin_right = -88.0
margin_bottom = -8.0
columns = 9

[node name="EffectTextureRect" parent="StatusEffectsContainer" instance=ExtResource( 7 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 32.0
margin_bottom = 32.0

[node name="PauseMenu" parent="." instance=ExtResource( 5 )]
visible = false

[connection signal="gun_clip_ammo_changed" from="." to="." method="_on_HUD_gun_clip_ammo_changed"]
[connection signal="inform_player_of_wave_ending" from="." to="." method="_on_HUD_inform_player_of_wave_ending"]
[connection signal="initialize_player" from="." to="." method="_on_HUD_initialize_player"]
[connection signal="initialize_wave_number" from="." to="." method="_on_HUD_initialize_wave_number"]
[connection signal="player_cash_changed" from="." to="." method="_on_HUD_player_cash_changed"]
[connection signal="player_hp_changed" from="." to="." method="_on_HUD_player_hp_changed"]
[connection signal="wave_number_changed" from="." to="." method="_on_HUD_wave_number_changed"]
[connection signal="weapon_equipped" from="." to="." method="_on_HUD_weapon_equipped"]
[connection signal="timeout" from="HUDControl/WaveNumLabel/WaveFinishedLabel/ShowPlayerNextWaveTimer" to="." method="_on_ShowPlayerNextWaveTimer_timeout"]
